Closed Bug 67709 Opened 24 years ago Closed 24 years ago

Assertion on each character typed in editor

Categories

(Core :: DOM: Editor, defect, P1)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla0.8

People

(Reporter: bryner, Assigned: bryner)

Details

Attachments

(2 files)

On a current CVS build on Linux, I get an assertion for every single character I type in mail compose (plaintext). Attaching a stacktrace.
i dont get any assertions on an older build that is nonetheless after my large embedding landing. hmmm. does this happen on any other platform? I'm on mac and have a windows box, but not linux. kin, akkana, does this happen for you?
Status: NEW → ASSIGNED
Priority: -- → P1
Target Milestone: --- → mozilla0.8
I don't see this assertion in today's build. I think I did see it sometime late last week.
Actually, I'm seeing this in Composer and in HTML mail compose also (but not typing in textareas). Changing summary.
Summary: Assertion on each character typed in plaintext mail compose → Assertion on each character typed in editor
my best guess so far is bryner's tree is somehow stale. this problem did exist breifly after my landing, but was quickly fixed. he said he hasn't done a clobber build in a while - my money is on that.
This bug is due to the variable rv never being initialized in nsHTMLEditRules::BeforeEdit. It doesn't look like this variable is really needed, anyway, so I just got rid of it (patch coming up).
Attached patch patchSplinter Review
r=blake
Yeah, I saw this assertion too. r=dbaron. do_QueryInterface always assigns 0 on failure so the null-check should be sufficient.
reassigning to me
Assignee: jfrancis → bryner
Status: ASSIGNED → NEW
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Brian, thanks for tracking this down!
bryner, is this working for you now ? please mark this bug verified-fixed if so....thanks...
verified
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: