Bug 67709 - assertions when typing in editor due to uninitialized return value.  r=blake, dbaron.  sr=brendan.